# GtestProject

./: .gitignore
ArrAndStrings/1.1/: CMakeLists.txt
ArrAndStrings/1.1/src_solution/: main.cpp  solution.h
ArrAndStrings/1.1/src_test/: solution_test.cpp
ArrAndStrings/1.2/: CMakeLists.txt
ArrAndStrings/1.2/src_solution/: CMakeLists.txt  main.cpp  solution.h
ArrAndStrings/1.2/src_test/: solution_test.cpp
ArrAndStrings/1.3/src_solution/: main.cpp  solution.h
ArrAndStrings/1.3/src_test/: solution_test.cpp
ArrAndStrings/1.4/src_solution/: main.cpp  solution.h
ArrAndStrings/1.4/src_test/: solution_test.cpp
ArrAndStrings/1.5/src_solution/: main.cpp  solution.h
ArrAndStrings/1.5/src_test/: solution_test.cpp
ArrAndStrings/1.6/src_solution/: main.cpp  solution.h
ArrAndStrings/1.6/src_test/: solution_test.cpp
ArrAndStrings/1.7/src_solution/: main.cpp  solution.h
ArrAndStrings/1.7/src_test/: solution_test.cpp
ArrAndStrings/1.8/src_solution/: main.cpp  solution.h
ArrAndStrings/1.8/src_test/: CMakeLists.txt  solution_test.cpp
ArrAndStrings/1.9/: CMakeLists.txt
ArrAndStrings/1.9/src_solution/: main.cpp  solution.h
ArrAndStrings/1.9/src_test/: CMakeLists.txt  main_test.cpp  solution_test.cpp
GtestTDD/supermarket_checkout/src_solution/: main.cpp  solution.h
GtestTDD/supermarket_checkout/src_test/: solution_test.cpp
Template/src_solution/: CMakeLists.txt  solution.h
Template/src_test/: solution_test.cpp
